# tree-sitter-applescript

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-applescript.pc.in
bindings/c/tree_sitter/: tree-sitter-applescript.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_applescript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterApplescriptTests/: TreeSitterApplescriptTests.swift
examples/: sample.applescript
queries/: highlights.scm  indents.scm  rainbows.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: app_commands.txt  applescript_objc.txt  basics.txt  command_parameters.txt  handler_calls.txt  handlers.txt  property_access.txt  records.txt  tell_blocks.txt  use_statements.txt
